--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     region: frankfurt
     plan: starter
     buildCommand: |
-      pip install --upgrade pip
-      pip install --no-cache-dir -r requirements.txt
+      pip install --upgrade pip setuptools wheel
+      pip install --no-cache-dir --only-binary=all -r requirements.txt
     startCommand: uvicorn src.main:app --host 0.0.0.0 --port $PORT --workers 1
     envVars:
       - key: PYTHON_VERSION
@@ -19,3 +19,5 @@ services:
         value: "1"
       - key: PIP_DISABLE_PIP_VERSION_CHECK
         value: "1"
+      - key: PIP_ONLY_BINARY
+        value: ":all:"
