--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "generate:sitemap": "node scripts/generate-sitemap.js"
   },
   "dependencies": {
-    "firebase": "^10.7.1",
     "date-fns": "^3.0.6",
+    "firebase": "^10.7.1",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
